syntax = "proto3";

package com.road.yishi.proto.player;

message AppellExchangeMsg {
  int32 appellId = 1;
  bool look = 2;
}
