syntax = "proto3";

package com.road.yishi.proto.player;

message AppellsMsg {
  repeated int32 appells = 1;
}
